# zephyr

./: .gitignore  Cargo.toml  README.md  clippy.toml  config.yaml  oh-my-opencode.json  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
zephyr-api/: Cargo.toml
zephyr-api/src/: auth.rs  config.rs  error.rs  lib.rs  response.rs  routes.rs  server.rs  state.rs
zephyr-api/src/handlers/: account.rs  health.rs  mod.rs  orders.rs  positions.rs  strategies.rs  tenants.rs  trades.rs
zephyr-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
zephyr-api/src/ws/: broadcaster.rs  config.rs  connection.rs  handler.rs  message.rs  mod.rs  state.rs
zephyr-backtest/: Cargo.toml
zephyr-backtest/src/: advanced_metrics.rs  error.rs  event.rs  lib.rs  matching.rs  metrics.rs  monte_carlo.rs  portfolio.rs  replayer.rs  walk_forward.rs
zephyr-benchmark/: Cargo.toml
zephyr-benchmark/src/: alert.rs  latency.rs  lib.rs  report.rs  throughput.rs
zephyr-cli/: Cargo.toml
zephyr-cli/src/: main.rs
zephyr-cli/src/commands/: backtest.rs  data.rs  mod.rs
zephyr-core/: Cargo.toml  README.md
zephyr-core/src/: lib.rs
zephyr-core/src/config/: loader.rs  mod.rs  traits.rs  validation.rs  zephyr_config.rs
zephyr-core/src/crypto/: contract.rs  funding.rs  margin.rs  mod.rs
zephyr-core/src/data/: kline.rs  mod.rs  order.rs  orderbook.rs  position.rs  tick.rs
zephyr-core/src/error/: config.rs  context.rs  data.rs  exchange.rs  mod.rs  network.rs  storage.rs  strategy.rs
zephyr-core/src/traits/: mod.rs  parser.rs  strategy.rs  trader.rs
zephyr-core/src/types/: amount.rs  funding_rate.rs  leverage.rs  mark_price.rs  mod.rs  order_id.rs  price.rs  quantity.rs  symbol.rs  timestamp.rs
zephyr-data/: Cargo.toml
zephyr-data/src/: lib.rs  storage.rs
zephyr-data/src/service/: aggregator.rs  gap.rs  mod.rs  quality.rs  subscription.rs  types.rs
zephyr-engine/: Cargo.toml
zephyr-engine/examples/: run_dual_thrust.rs
zephyr-engine/src/: cta.rs  execution_manager.rs  hft.rs  lib.rs  position.rs  rebalancer.rs  scheduler.rs  sel.rs  signal.rs
zephyr-engine/src/distributed/: config.rs  election.rs  executor.rs  lock.rs  mod.rs  state.rs  task.rs
zephyr-engine/src/execute/: config.rs  context.rs  factory.rs  min_impact.rs  mod.rs  traits.rs  twap.rs  vwap.rs
zephyr-engine/src/filter/: filters.rs  manager.rs  mod.rs  stats.rs  types.rs
zephyr-engine/src/notifier/: channels.rs  mod.rs  notifier.rs  reliability.rs  types.rs
zephyr-engine/src/portfolio/: manager.rs  merger.rs  metrics.rs  mod.rs  types.rs
zephyr-engine/src/strategies/: dual_thrust.rs  mod.rs
zephyr-engine/src/uft/: context.rs  cpu_affinity.rs  lockfree.rs  mod.rs  timestamp.rs
zephyr-gateway/: Cargo.toml
zephyr-gateway/src/: lib.rs
zephyr-gateway/src/binance/: mod.rs  parser.rs  trader.rs  types.rs
zephyr-gateway/src/bitget/: mod.rs  parser.rs  trader.rs  types.rs
zephyr-gateway/src/hyperliquid/: mod.rs  parser.rs  trader.rs  types.rs
zephyr-gateway/src/okx/: mod.rs  parser.rs  trader.rs  types.rs
zephyr-gateway/src/rest/: client.rs  config.rs  mod.rs  rate_limiter.rs  signer.rs
zephyr-gateway/src/ws/: client.rs  config.rs  message.rs  mod.rs  state.rs
zephyr-python/: Cargo.toml  README.md  build.rs  pyproject.toml
zephyr-python/python/zephyr_py/: __init__.py  zephyr_py.pyi
zephyr-python/src/: data.rs  decorators.rs  error.rs  lib.rs  numpy_conv.rs  strategy.rs  types.rs
zephyr-risk/: Cargo.toml
zephyr-risk/src/: approval.rs  circuit_breaker.rs  controller.rs  error.rs  kill_switch.rs  lib.rs  limits.rs  retry.rs  stress.rs  var.rs
zephyr-security/: Cargo.toml
zephyr-security/src/: error.rs  lib.rs
zephyr-security/src/access/: config.rs  mod.rs  permission.rs  role.rs  session.rs  user.rs
zephyr-security/src/audit/: event.rs  logger.rs  mod.rs  signature.rs  storage.rs
zephyr-security/src/keys/: config.rs  crypto.rs  manager.rs  mod.rs  secret.rs
zephyr-security/src/tenant/: config.rs  identifier.rs  isolation.rs  manager.rs  mod.rs  quota.rs  tenant.rs
zephyr-server/: Cargo.toml
zephyr-server/src/: config.rs  lib.rs  main.rs  market_data_router.rs  server.rs  shutdown.rs  strategy_manager.rs
zephyr-server/src/plugin/: loader.rs  mod.rs  registry.rs
zephyr-strategy/: Cargo.toml
zephyr-strategy/src/: context.rs  engine.rs  lib.rs  signal.rs  trait.rs
zephyr-strategy/src/loader/: config.rs  mod.rs  py_bindings.rs  python_adapter.rs  python_loader.rs  rust_loader.rs  unified.rs
zephyr-strategy/src/runner/: command.rs  hot_reload.rs  mod.rs  runner.rs
zephyr-strategy/src/strategies/: dual_thrust.rs  mod.rs
zephyr-strategy/src/subscription/: manager.rs  mod.rs  router.rs
zephyr-telemetry/: Cargo.toml
zephyr-telemetry/src/: lib.rs  masking.rs  spans.rs
zephyr-telemetry/src/logging/: config.rs  formatter.rs  layer.rs  mod.rs
zephyr-telemetry/src/metrics/: config.rs  mod.rs  recorder.rs
zephyr-web/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
zephyr-web/src/: App.vue  main.ts
zephyr-web/src/api/: client.ts  index.ts  websocket.ts
zephyr-web/src/components/charts/: PnlChart.vue  PositionPieChart.vue  StrategyPerformanceChart.vue
zephyr-web/src/layouts/: MainLayout.vue
zephyr-web/src/router/: index.ts
zephyr-web/src/stores/: auth.ts  index.ts  theme.ts  trading.ts
zephyr-web/src/styles/: main.scss
zephyr-web/src/types/: index.ts
zephyr-web/src/views/: Dashboard.vue  Login.vue  Logs.vue  Orders.vue  Positions.vue  Risk.vue  Settings.vue  Strategies.vue  Trades.vue
