[package]
name = "zephyr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, traits, and interfaces for Zephyr trading system"

[dependencies]
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3.14"

[lints]
workspace = true
