[package]
name = "zephyr-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Exchange adapters and network communication for Zephyr trading system"

[features]
default = ["binance", "okx"]
binance = []
okx = []
bitget = []
hyperliquid = []

[dependencies]
zephyr-core = { path = "../zephyr-core" }
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
tracing.workspace = true
parking_lot.workspace = true
futures.workspace = true
chrono.workspace = true
rust_decimal.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
