[package]
name = "zephyr-risk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Risk control and management for Zephyr trading system"

[dependencies]
zephyr-core = { path = "../zephyr-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tracing.workspace = true
rust_decimal.workspace = true
humantime-serde.workspace = true

[dev-dependencies]
proptest.workspace = true
rust_decimal_macros.workspace = true

[lints]
workspace = true
