[package]
name = "zephyr-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Security module for Zephyr trading system - key management, access control, and audit logging"

[dependencies]
zephyr-core = { path = "../zephyr-core" }

# Cryptography
ring.workspace = true
argon2.workspace = true
zeroize.workspace = true
hmac.workspace = true
sha2.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
base64.workspace = true
hex.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3.14"

[lints]
workspace = true
